Undo/Snapshot System
Working undo and snapshot system for placement

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,27 @@ solutions/
 editor/
 bin/
 Assets/
+Assets/Levels/example.level.cryasset
+Assets/Levels/example/example.level
+Assets/Levels/example/example.level.bak
+Assets/Levels/example/example.level.bak2
+Assets/Levels/example/Layers/main.lyr
+Assets/Levels/example/Layers/main.lyr.bak
+Assets/Levels/example/Layers/main.lyr.bak2
+Assets/Levels/example/Layers/terrain.lyr
+Assets/Levels/example/Layers/terrain.lyr.bak
+Assets/Levels/example/Layers/terrain.lyr.bak2
+Assets/Levels/example/leveldata/Heightmap.dat
+Assets/Levels/example/leveldata/Heightmap.dat.bak
+Assets/Levels/example/leveldata/Heightmap.dat.bak2
+Assets/Levels/example/leveldata/TimeOfDay.xml
+Assets/Levels/example/leveldata/TimeOfDay.xml.bak
+Assets/Levels/example/leveldata/TimeOfDay.xml.bak2
+Assets/Levels/example/terraintexture.pak
+Assets/Materials/gymfloor.mtl
+Assets/Materials/gymfloor.mtl.cryasset
+Assets/Materials/gymfloor_ddna.dds.cryasset
+Assets/Materials/GymFloor_ddna.tif
+Assets/Materials/gymfloor_diffuse.dds.cryasset
+Assets/Materials/gymfloor_spec.dds.cryasset
+Assets/Materials/GymFloor_spec.tif
